fixing overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,6 @@ a {
   flex-shrink: 0;
   position: relative;
 }
+#__next {
+  overflow: hidden;
+}
